@@ -13,7 +13,7 @@ function usage()
   echo "Usage: isabelle $PRG [OPTIONS] [FILE]"
   echo
   echo "  Options are:"
-  echo "    -o FORMAT    specify output format: pdf (default), dvi, bbl, idx, sty"
+  echo "    -o FORMAT    specify output format: pdf (default), bbl, idx, sty"
   echo
   echo "  Run LaTeX (and related tools) on FILE (default root.tex),"
   echo "  producing the specified output format."
@@ -70,7 +70,6 @@ function check_root () { [ -f "$FILEBASE.tex" ] || fail "Bad file '$FILE'"; }
 
 # operations
 
-function run_latex () { $ISABELLE_LATEX "\\nonstopmode\\input{$FILEBASE.tex}"; }
 function run_pdflatex () { $ISABELLE_PDFLATEX "\\nonstopmode\\input{$FILEBASE.tex}"; }
 function run_bibtex () {
   $ISABELLE_BIBTEX </dev/null "$FILEBASE"
@@ -94,11 +93,6 @@ case "$OUTFORMAT" in
   pdf)
     check_root && \
     run_pdflatex
-    RC="$?"
-    ;;
-  dvi)
-    check_root && \
-    run_latex
     RC="$?"
     ;;
   bbl)
